--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@unocss/reset": "^0.45.29",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
+    "unocss": "^0.45.29",
+    "unplugin-auto-import": "^0.11.2",
     "vite": "^3.0.7",
     "vue-tsc": "^1.0.3"
   }
