--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.45.29",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
@@ -17,6 +18,7 @@
     "unocss": "^0.45.29",
     "unplugin-auto-import": "^0.11.2",
     "vite": "^3.0.7",
+    "vite-plugin-pages": "^0.26.0",
     "vue-tsc": "^1.0.3"
   }
 }
