--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@unocss/reset": "^0.45.29",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuetify": "3.0.0-beta.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
     "unocss": "^0.45.29",
     "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.8",
     "vite": "^3.0.7",
     "vite-plugin-pages": "^0.26.0",
     "vue-tsc": "^1.0.3"
