--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,23 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.45.29",
+    "@vueuse/core": "^9.3.0",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
     "vuetify": "3.0.0-beta.13"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.33",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@types/node": "^18.11.0",
+    "@unocss/preset-icons": "^0.45.29",
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
     "unocss": "^0.45.29",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.8",
-    "vite": "^3.0.7",
+    "vite": "^3.1.8",
     "vite-plugin-pages": "^0.26.0",
     "vue-tsc": "^1.0.3"
   }
