--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ node_modules
 frontend/dist
 frontend/wailsjs
 frontend/src/auto-imports.d.ts
-frontend/src/components.d.d.ts
+frontend/src/components.d.ts
 tmp
