--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
-    "i18n-ally.localesPaths": [
-        "frontend/src/locales"
-    ],
-    "i18n-ally.keystyle": "nested"
+  "i18n-ally.localesPaths": ["frontend/src/locales"],
+  "i18n-ally.keystyle": "nested",
+  "unocss.root": "frontend"
 }
