--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^18.11.0",
     "@unocss/preset-icons": "^0.45.29",
     "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/runtime-core": "^3.2.41",
     "typescript": "^4.6.4",
     "unocss": "^0.45.29",
     "unplugin-auto-import": "^0.11.2",
