--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@unocss/reset": "^0.45.29",
     "@vueuse/core": "^9.3.0",
+    "date-fns": "^2.29.3",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
