--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
-    "vuetify": "3.0.0-beta.13"
+    "vuetify": "^3.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
