--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,34 +6,36 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "upgrade": "ncu -u"
   },
   "dependencies": {
     "@mdi/js": "^7.0.96",
-    "@unocss/reset": "^0.45.29",
-    "@vueuse/core": "^9.3.0",
+    "@unocss/reset": "^0.46.5",
+    "@vueuse/core": "^9.5.0",
     "date-fns": "^2.29.3",
     "is-promise": "^4.0.0",
-    "vue": "^3.2.37",
+    "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.5",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.27.0",
-    "@iconify-json/mdi": "^1.1.33",
+    "@antfu/eslint-config": "^0.31.0",
+    "@iconify-json/mdi": "^1.1.34",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
-    "@types/node": "^18.11.0",
-    "@unocss/preset-icons": "^0.45.29",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/runtime-core": "^3.2.41",
-    "eslint": "^8.26.0",
-    "typescript": "^4.6.4",
-    "unocss": "^0.45.29",
-    "unplugin-auto-import": "^0.11.2",
-    "unplugin-vue-components": "^0.22.8",
-    "vite": "^3.1.8",
-    "vite-plugin-pages": "^0.26.0",
-    "vue-tsc": "^1.0.3"
+    "@types/node": "^18.11.9",
+    "@unocss/preset-icons": "^0.46.5",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/runtime-core": "^3.2.45",
+    "eslint": "^8.28.0",
+    "npm-check-updates": "^16.4.1",
+    "typescript": "^4.9.3",
+    "unocss": "^0.46.5",
+    "unplugin-auto-import": "^0.11.4",
+    "unplugin-vue-components": "^0.22.9",
+    "vite": "^3.2.4",
+    "vite-plugin-pages": "^0.27.1",
+    "vue-tsc": "^1.0.9"
   }
 }
