--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@vue/runtime-core": "^3.2.45",
     "eslint": "^8.28.0",
     "npm-check-updates": "^16.4.1",
+    "sass": "^1.56.1",
     "typescript": "^4.9.3",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.4",
