--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "@unocss/reset": "^0.46.5",
+    "@vueuse/components": "^9.6.0",
     "@vueuse/core": "^9.5.0",
     "date-fns": "^2.29.3",
     "is-promise": "^4.0.0",
+    "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
@@ -26,6 +28,7 @@
     "@antfu/eslint-config": "^0.31.0",
     "@iconify-json/mdi": "^1.1.34",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.9",
     "@unocss/preset-icons": "^0.46.5",
     "@vitejs/plugin-vue": "^3.2.0",
