--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "postinstall": "cd frontend && pnpm i && pnpm run build",
     "dev": "node scripts/wails dev",
     "build": "node scripts/wails build",
-    "build:nsis": "node scripts/wails build -n"
+    "build:nsis": "node scripts/wails build -n",
+    "release": "node scripts/release"
   },
   "devDependencies": {
     "commander": "^9.4.1",
+    "execa": "^5.1.1",
+    "semver": "^7.3.8",
     "vue-i18n": "^9.2.2"
   }
 }
