--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,8 +19,15 @@ jobs:
         with:
           node-version: 18
           cache: 'pnpm'
+          cache-dependency-path: '**/pnpm-lock.yaml'
 
       - run: pnpm install
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '^1.19.1'
+
+      - run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
 
       - name: Install nsis And upx
         run: |
@@ -34,6 +41,6 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/bin/*.exe"
+          artifacts: "/build/bin/*.exe"
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
