--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,13 +13,12 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: 6.0.2
+          version: 6.32.9
 
       - uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'pnpm'
-          cache-dependency-path: '**/pnpm-lock.yaml'
 
       - run: pnpm install
 
@@ -41,6 +40,6 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "/build/bin/*.exe"
+          artifacts: "**/build/bin/*.exe"
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
