--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tauri-apps/api": "^1.2.0",
     "@unocss/reset": "^0.50.4",
     "@vueuse/core": "^9.13.0",
+    "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
+    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
     "vuetify": "^3.1.10"
