--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tauri-apps/api": "^1.2.0",
     "@unocss/reset": "^0.50.4",
     "@vueuse/core": "^9.13.0",
+    "camel-case": "^4.1.2",
+    "date-fns": "^2.29.3",
+    "snake-case": "^3.0.4",
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
