--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^1.2.0",
     "@unocss/reset": "^0.50.4",
     "@vueuse/core": "^9.13.0",
+    "ant-design-vue": "^3.2.17",
     "camel-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "snake-case": "^3.0.4",
@@ -21,8 +22,7 @@
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
     "vue": "^3.2.45",
-    "vue-i18n": "^9.2.2",
-    "vuetify": "^3.1.10"
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
@@ -33,7 +33,6 @@
     "@unocss/preset-icons": "^0.50.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.36.0",
-    "sass": "^1.59.3",
     "typescript": "^4.6.4",
     "unocss": "^0.50.4",
     "unplugin-auto-import": "^0.15.1",
