添加router、lint-staged

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "skipLibCheck": true,
     "noImplicitAny": false,
     "types": [
-      "@intlify/unplugin-vue-i18n/messages"
+      "@intlify/unplugin-vue-i18n/messages",
+      "vite-plugin-pages/client"
     ]
   },
   "include": [
