--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
     "vue": "^3.2.45",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
@@ -32,12 +33,24 @@
     "@types/node": "^18.7.10",
     "@unocss/preset-icons": "^0.50.4",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/runtime-core": "^3.2.47",
     "eslint": "^8.36.0",
+    "lint-staged": "^13.2.1",
+    "simple-git-hooks": "^2.8.1",
     "typescript": "^4.6.4",
     "unocss": "^0.50.4",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.0.0",
+    "vite-plugin-pages": "^0.29.0",
     "vue-tsc": "^1.0.11"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{vue,ts,json}": [
+      "eslint --fix"
+    ]
   }
 }
