--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ant-design-vue": "^3.2.17",
     "camel-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "pinia": "^2.0.34",
     "snake-case": "^3.0.4",
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
