修改i18n插件设置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "src/locales"
   ],
   "i18n-ally.keystyle": "nested",
+  "i18n-ally.displayLanguage": "zh-CN",
   "prettier.enable": false,
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
