--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^10.1.0",
     "ant-design-vue": "^3.2.17",
     "camel-case": "^4.1.2",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "pinia": "^2.0.34",
     "snake-case": "^3.0.4",
