--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint:fix": "eslint . --fix",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "release": "node scripts/release"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
@@ -36,8 +37,12 @@
     "@unocss/preset-icons": "^0.50.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/runtime-core": "^3.2.47",
+    "commander": "^10.0.1",
     "eslint": "^8.36.0",
+    "execa": "^7.1.1",
+    "fs-extra": "^11.1.1",
     "lint-staged": "^13.2.1",
+    "semver": "^7.5.0",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^4.6.4",
     "unocss": "^0.50.4",
