--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shion",
   "type": "module",
-  "version": "0.2.0",
+  "version": "0.1.20",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -57,7 +57,7 @@
     "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
-    "*.{vue,ts,json}": [
+    "*.{vue,ts,json,yaml}": [
       "eslint --fix"
     ]
   }
