--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^8.36.0",
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
+    "less": "^4.1.3",
     "lint-staged": "^13.2.1",
     "semver": "^7.5.0",
     "simple-git-hooks": "^2.8.1",
@@ -48,7 +49,7 @@
     "unocss": "^0.50.4",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.0.0",
+    "vite": "^4.3.0",
     "vite-plugin-pages": "^0.29.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vue-tsc": "^1.0.11"
