添加插件减少date-fns/locale打包体积

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,5 @@
     "moduleResolution": "Node",
     "strict": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "plugins"]
 }
