--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@antfu/eslint-config": "^0.36.0",
     "@iconify-json/mdi": "^1.1.50",
     "@intlify/unplugin-vue-i18n": "^0.9.2",
+    "@rollup/pluginutils": "^5.0.2",
     "@tauri-apps/cli": "^1.3.1",
     "@types/node": "^18.7.10",
     "@unocss/preset-icons": "^0.50.4",
@@ -43,6 +44,8 @@
     "fs-extra": "^11.1.1",
     "less": "^4.1.3",
     "lint-staged": "^13.2.1",
+    "magic-string": "^0.30.0",
+    "rollup-plugin-visualizer": "^5.9.0",
     "semver": "^7.5.0",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^4.6.4",
