--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.3.0",
     "@unocss/reset": "^0.50.4",
+    "@vueuse/components": "^10.1.2",
     "@vueuse/core": "^10.1.0",
     "ant-design-vue": "^3.2.17",
     "camel-case": "^4.1.2",
