--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shion",
   "type": "module",
-  "version": "0.2.0-alpha.8",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "vite",
