--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shion",
   "type": "module",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -42,6 +42,7 @@
     "eslint": "^8.36.0",
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
+    "inquirer": "^9.2.6",
     "less": "^4.1.3",
     "lint-staged": "^13.2.1",
     "magic-string": "^0.30.0",
