--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "camel-case": "^4.1.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "echarts": "^5.4.2",
     "pinia": "^2.0.34",
     "snake-case": "^3.0.4",
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
     "vue": "^3.2.45",
+    "vue-echarts": "^6.5.5",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
   },
