lint-staged添加rust文件处理

--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
   "lint-staged": {
     "*.{vue,ts,json,yaml}": [
       "eslint --fix"
+    ],
+    "*.rs": [
+      "rustfmt -- "
     ]
   }
 }
