--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "echarts": "^5.4.2",
     "pinia": "^2.0.34",
     "snake-case": "^3.0.4",
-    "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
-    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store",
+    "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log#v1",
+    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "vue": "^3.2.45",
     "vue-echarts": "^6.5.5",
     "vue-i18n": "^9.2.2",
