--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vite": "^4.3.0",
     "vite-plugin-pages": "^0.29.0",
     "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-vue-devtools": "1.0.0-beta.5",
     "vite-tsconfig-paths": "^4.2.0",
     "vue-tsc": "^1.0.11"
   },
