--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-wo
 winapi = { version = "0.3.9", features = ["winnls", "winuser", "winver", "psapi", "shellapi"] }
 image = "0.24.6"
 rdev = "0.5.3"
+nodio-win32 = { git = "https://github.com/hanaTsuk1/nodio", version = "0.1.0" }
 
 
 [features]
