--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["app-all", "notification-all", "process-exit", "system-tray", "updater"] }
+tauri = { version = "1.3", features = ["app-all", "notification-all", "process-exit", "shell-open", "system-tray", "updater"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "^0.4"
