--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.4.0-beta.3",
   "private": true,
   "scripts": {
+    "postinstall": "simple-git-hooks",
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
