refactor: prisma kysely 修改数据库api

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint:fix": "eslint . --fix",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:reset-migrate": "rimraf prisma/database && rimraf prisma/migrations && prisma migrate dev",
+    "db:format": "prisma format",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build -c src-tauri/tauri.conf.build.json",
@@ -23,6 +27,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "echarts": "^5.4.2",
+    "kysely": "^0.26.3",
     "p-queue": "^7.3.4",
     "pinia": "^2.0.34",
     "snake-case": "^3.0.4",
@@ -53,6 +58,9 @@
     "less": "^4.1.3",
     "lint-staged": "^13.2.1",
     "magic-string": "^0.30.0",
+    "prisma": "^5.3.1",
+    "prisma-kysely": "^1.7.0",
+    "rimraf": "^5.0.1",
     "rollup-plugin-visualizer": "^5.9.0",
     "semver": "^7.5.0",
     "simple-git-hooks": "^2.8.1",
