refactor: model动态赋值给database

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
     "types": [
       "@intlify/unplugin-vue-i18n/messages",
       "vite-plugin-pages/client"
