--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vueuse/core": "^10.1.0",
     "ant-design-vue": "^3.2.17",
     "camel-case": "^4.1.2",
+    "camelcase-keys": "^9.0.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "echarts": "^5.4.2",
