--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
+    "test": "vitest",
     "lint:fix": "eslint . --fix",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -47,10 +48,12 @@
     "@intlify/unplugin-vue-i18n": "^0.9.2",
     "@rollup/pluginutils": "^5.0.2",
     "@tauri-apps/cli": "^1.3.1",
+    "@types/better-sqlite3": "^7.6.5",
     "@types/node": "^18.7.10",
     "@unocss/preset-icons": "^0.50.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/runtime-core": "^3.2.47",
+    "better-sqlite3": "^8.7.0",
     "commander": "^10.0.1",
     "eslint": "^8.36.0",
     "execa": "^7.1.1",
@@ -74,6 +77,7 @@
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-vue-devtools": "1.0.0-beta.5",
     "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.34.6",
     "vue-tsc": "^1.0.11"
   },
   "simple-git-hooks": {
