--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "lint:fix": "eslint . --fix",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -52,6 +53,7 @@
     "@types/node": "^18.7.10",
     "@unocss/preset-icons": "^0.50.4",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "@vue/runtime-core": "^3.2.47",
     "better-sqlite3": "^8.7.0",
     "commander": "^10.0.1",
