--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
+    "badge": "istanbul-badges-readme --style=\"for-the-badge\"",
     "lint:fix": "eslint . --fix",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -61,6 +62,7 @@
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
     "inquirer": "^9.2.6",
+    "istanbul-badges-readme": "^1.8.5",
     "less": "^4.1.3",
     "lint-staged": "^13.2.1",
     "magic-string": "^0.30.0",
