--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     "release": "vue-tsc --noEmit && node scripts/release"
   },
   "dependencies": {
+    "@milkdown/core": "^7.3.0",
+    "@milkdown/plugin-history": "^7.3.0",
+    "@milkdown/plugin-upload": "^7.3.0",
+    "@milkdown/preset-commonmark": "^7.3.0",
+    "@milkdown/prose": "^7.3.0",
+    "@milkdown/theme-nord": "^7.3.0",
+    "@milkdown/utils": "^7.3.0",
+    "@milkdown/vue": "^7.3.0",
     "@tauri-apps/api": "^1.3.0",
     "@vueuse/components": "^10.1.2",
     "@vueuse/core": "^10.1.0",
@@ -32,6 +40,7 @@
     "date-fns": "^2.29.3",
     "echarts": "^5.4.2",
     "kysely": "^0.26.3",
+    "nanoid": "^5.0.1",
     "p-queue": "^7.3.4",
     "pinia": "^2.0.34",
     "snake-case": "^3.0.4",
@@ -52,7 +61,8 @@
     "@tauri-apps/cli": "^1.3.1",
     "@types/better-sqlite3": "^7.6.5",
     "@types/node": "^18.7.10",
-    "@unocss/preset-icons": "^0.50.4",
+    "@unocss/preset-icons": "^0.56.5",
+    "@unocss/transformer-directives": "^0.56.5",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-v8": "^0.34.6",
     "@vue/runtime-core": "^3.2.47",
@@ -73,7 +83,7 @@
     "semver": "^7.5.0",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^5.2.2",
-    "unocss": "^0.50.4",
+    "unocss": "^0.56.5",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.0",
