--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@milkdown/core": "^7.3.0",
     "@milkdown/plugin-history": "^7.3.0",
+    "@milkdown/plugin-listener": "^7.3.0",
     "@milkdown/plugin-upload": "^7.3.0",
     "@milkdown/preset-commonmark": "^7.3.0",
     "@milkdown/prose": "^7.3.0",
