--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@tauri-apps/api": "^1.3.0",
     "@vueuse/components": "^10.1.2",
     "@vueuse/core": "^10.1.0",
-    "ant-design-vue": "^3.2.17",
     "camel-case": "^4.1.2",
     "camelcase-keys": "^9.0.0",
     "classnames": "^2.3.2",
@@ -49,7 +48,7 @@
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log#v1",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
-    "vue": "^3.2.45",
+    "vue": "^3.3.7",
     "vue-echarts": "^6.5.5",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
@@ -63,10 +62,11 @@
     "@types/better-sqlite3": "^7.6.5",
     "@types/node": "^18.7.10",
     "@unocss/preset-icons": "^0.56.5",
+    "@unocss/reset": "^0.57.1",
     "@unocss/transformer-directives": "^0.56.5",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "@vue/runtime-core": "^3.2.47",
+    "@vue/runtime-core": "^3.3.7",
     "better-sqlite3": "^8.7.0",
     "commander": "^10.0.1",
     "eslint": "^8.36.0",
@@ -74,13 +74,13 @@
     "fs-extra": "^11.1.1",
     "inquirer": "^9.2.6",
     "istanbul-badges-readme": "^1.8.5",
-    "less": "^4.1.3",
     "lint-staged": "^13.2.1",
     "magic-string": "^0.30.0",
     "prisma": "^5.3.1",
     "prisma-kysely": "^1.7.0",
     "rimraf": "^5.0.1",
     "rollup-plugin-visualizer": "^5.9.0",
+    "sass": "^1.69.4",
     "semver": "^7.5.0",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^5.2.2",
@@ -89,11 +89,11 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.0",
     "vite-plugin-pages": "^0.29.0",
-    "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-vue-devtools": "1.0.0-beta.5",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.0.11"
+    "vue-tsc": "^1.0.11",
+    "vuetify": "^3.3.23"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
