--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "vue": "^3.3.7",
     "vue-echarts": "^6.5.5",
+    "vue-final-modal": "^4.4.5",
     "vue-i18n": "^9.6.0",
     "vue-router": "^4.1.6"
   },
