--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log#v1",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
+    "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
     "vue-echarts": "^6.5.5",
     "vue-final-modal": "^4.4.5",
