--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "release": "vue-tsc --noEmit && node scripts/release"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.17.0",
     "@mdi/font": "^7.3.67",
     "@milkdown/core": "^7.3.0",
     "@milkdown/plugin-history": "^7.3.0",
@@ -53,7 +54,8 @@
     "vue-echarts": "^6.5.5",
     "vue-final-modal": "^4.4.5",
     "vue-i18n": "^9.6.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.3.23"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
@@ -93,8 +95,7 @@
     "vite-plugin-vue-devtools": "1.0.0-beta.5",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.0.11",
-    "vuetify": "^3.3.23"
+    "vue-tsc": "^1.0.11"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
