--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@milkdown/utils": "^7.3.0",
     "@milkdown/vue": "^7.3.0",
     "@tauri-apps/api": "^1.3.0",
+    "@vee-validate/zod": "^4.11.8",
     "@vueuse/components": "^10.1.2",
     "@vueuse/core": "^10.1.0",
     "camel-case": "^4.1.2",
@@ -41,6 +42,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "echarts": "^5.4.2",
+    "i18next": "^23.6.0",
     "kysely": "^0.26.3",
     "nanoid": "^5.0.1",
     "p-queue": "^7.3.4",
@@ -55,7 +57,9 @@
     "vue-final-modal": "^4.4.5",
     "vue-i18n": "^9.6.0",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.3.23"
+    "vuetify": "^3.3.23",
+    "zod": "^3.22.4",
+    "zod-i18n-map": "^2.21.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
