导航栏菜单

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "echarts": "^5.4.2",
     "i18next": "^23.6.0",
     "kysely": "^0.26.3",
+    "mitt": "^3.0.1",
     "nanoid": "^5.0.1",
     "notiwind": "^2.0.2",
     "p-queue": "^7.3.4",
