--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["app-all", "fs-create-dir", "fs-write-file", "notification-all", "path-all", "process-exit", "protocol-asset", "shell-open", "system-tray", "updater"] }
+tauri = { version = "1.3", features = ["app-all", "fs-create-dir", "fs-write-file", "notification-all", "path-all", "process-exit", "protocol-asset", "shell-open", "system-tray", "updater", "window-hide", "window-minimize", "window-start-dragging"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "^0.4"
@@ -26,6 +26,7 @@ winapi = { version = "0.3.9", features = ["winnls", "winuser", "winver", "psapi"
 image = "0.24.6"
 rdev = "0.5.3"
 nodio-win32 = { git = "https://github.com/hanaTsuk1/nodio", version = "0.1.0" }
+window-shadows = "0.2.2"
 
 
 [features]
