--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "vite": "^4.3.0",
     "vite-plugin-pages": "^0.29.0",
     "vite-plugin-vue-devtools": "1.0.0-beta.5",
+    "vite-plugin-vuetify": "^1.0.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.0.11"
