--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shion",
   "type": "module",
-  "version": "0.5.0-beta.5",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "postinstall": "simple-git-hooks",
