--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@date-io/date-fns": "^2.17.0",
     "@mdi/font": "^7.3.67",
     "@tauri-apps/api": "^1.3.0",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
+    "@tiptap/vue-3": "^2.1.12",
     "@vee-validate/zod": "^4.11.8",
     "@vueuse/components": "^10.1.2",
     "@vueuse/core": "^10.1.0",
