--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@date-io/date-fns": "^2.17.0",
     "@mdi/font": "^7.3.67",
     "@tauri-apps/api": "^1.3.0",
+    "@tiptap/core": "^2.1.12",
     "@tiptap/extension-image": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
