--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "echarts": "^5.4.2",
+    "fast-deep-equal": "^3.1.3",
     "gridstack": "^9.5.1",
     "i18next": "^23.6.0",
     "kysely": "^0.26.3",
