--- a/package.json
+++ b/package.json
@@ -24,7 +24,16 @@
   "dependencies": {
     "@date-io/date-fns": "^2.17.0",
     "@mdi/font": "^7.3.67",
-    "@tauri-apps/api": "^1.3.0",
+    "@tauri-apps/api": "2.0.0-alpha.13",
+    "@tauri-apps/plugin-app": "2.0.0-alpha.1",
+    "@tauri-apps/plugin-autostart": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-fs": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-log": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-process": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-shell": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-sql": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-store": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-updater": "2.0.0-alpha.5",
     "@tiptap/core": "^2.1.12",
     "@tiptap/extension-image": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
@@ -49,10 +58,6 @@
     "p-queue": "^7.3.4",
     "pinia": "^2.0.34",
     "svg.js": "^2.7.1",
-    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
-    "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log#v1",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
-    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
     "vue-component-type-helpers": "^1.8.24",
@@ -69,7 +74,7 @@
     "@iconify-json/mdi": "^1.1.50",
     "@intlify/unplugin-vue-i18n": "^1.4.0",
     "@rollup/pluginutils": "^5.0.2",
-    "@tauri-apps/cli": "^1.3.1",
+    "@tauri-apps/cli": "2.0.0-alpha.20",
     "@types/better-sqlite3": "^7.6.5",
     "@types/node": "^18.7.10",
     "@unocss/preset-icons": "^0.56.5",
