--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,26 +10,33 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.3", features = [] }
+tauri-build = { version = "2.0.0-alpha.13", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["app-all", "fs-create-dir", "fs-write-file", "notification-all", "path-all", "process-exit", "protocol-asset", "shell-open", "system-tray", "updater", "window-hide", "window-minimize", "window-start-dragging"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "^0.4"
-tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
-tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 winapi = { version = "0.3.9", features = ["winnls", "winuser", "winver", "psapi", "shellapi"] }
 image = "0.24.6"
 rdev = { git = "https://github.com/fufesou/rdev" }
 nodio-win32 = { git = "https://github.com/hanaTsuk1/nodio", version = "0.1.0" }
 window-shadows = "0.2.2"
+tauri = { version = "2.0.0-alpha.20", features = [ "protocol-asset", "tray-icon"] }
+tauri-plugin-updater = "2.0.0-alpha.6"
+tauri-plugin-process = "2.0.0-alpha.6"
+tauri-plugin-fs = "2.0.0-alpha.6"
+tauri-plugin-shell = "2.0.0-alpha.6"
+tauri-plugin-sql = { version = "2.0.0-alpha.6", features = ["sqlite"] }
+tauri-plugin-store = "2.0.0-alpha.6"
+tauri-plugin-log = "2.0.0-alpha.6"
+tauri-plugin-autostart = "2.0.0-alpha.6"
+tauri-plugin-single-instance = "2.0.0-alpha.6"
 
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[lib]
+crate-type = ["staticlib", "cdylib", "rlib"]
