--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
     "inquirer": "^9.2.6",
+    "internal-ip": "^7.0.0",
     "istanbul-badges-readme": "^1.8.5",
     "lint-staged": "^13.2.1",
     "prisma": "^5.3.1",
