--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,7 +24,7 @@ tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-wo
 tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 winapi = { version = "0.3.9", features = ["winnls", "winuser", "winver", "psapi", "shellapi"] }
 image = "0.24.6"
-rdev = "0.5.3"
+rdev = { git = "https://github.com/fufesou/rdev" }
 nodio-win32 = { git = "https://github.com/hanaTsuk1/nodio", version = "0.1.0" }
 window-shadows = "0.2.2"
 
