--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@tauri-apps/cli": "2.0.0-alpha.20",
     "@types/better-sqlite3": "^7.6.5",
     "@types/node": "^18.7.10",
+    "@types/postcss-pxtorem": "^6.0.3",
     "@unocss/preset-icons": "^0.56.5",
     "@unocss/reset": "^0.57.1",
     "@unocss/transformer-directives": "^0.56.5",
@@ -94,6 +95,8 @@
     "internal-ip": "^7.0.0",
     "istanbul-badges-readme": "^1.8.5",
     "lint-staged": "^13.2.1",
+    "postcss-calc": "^9.0.1",
+    "postcss-pxtorem": "^6.0.0",
     "prisma": "^5.3.1",
     "prisma-kysely": "^1.7.0",
     "rimraf": "^5.0.1",
