--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "pinia": "^2.0.34",
     "svg.js": "^2.7.1",
     "tauri-plugin-shion-synchronizer-api": "github:hanaTsuk1/shion-synchronizer",
+    "tauri-plugin-shion-watcher-api": "github:hanaTsuk1/shion-watcher",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
     "vue-component-type-helpers": "^1.8.24",
