--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,6 @@ tauri-build = { version = "2.0.0-alpha.13", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "^0.4"
-image = "0.24.6"
 tauri = { version = "2.0.0-alpha.20", features = [ "protocol-asset", "tray-icon"] }
 tauri-plugin-process = "2.0.0-alpha.6"
 tauri-plugin-fs = "2.0.0-alpha.6"
@@ -25,11 +24,9 @@ tauri-plugin-sql = { version = "2.0.0-alpha.6", features = ["sqlite"] }
 tauri-plugin-store = "2.0.0-alpha.6"
 tauri-plugin-log = "2.0.0-alpha.6"
 tauri-plugin-shion-synchronizer = { git = "https://github.com/hanaTsuk1/shion-synchronizer" }
+tauri-plugin-shion-watcher = { git = "https://github.com/hanaTsuk1/shion-watcher" }
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
-winapi = { version = "0.3.9", features = ["winnls", "winuser", "winver", "psapi", "shellapi"] }
-rdev = "0.5.3"
-nodio-win32 = { git = "https://github.com/hanaTsuk1/nodio", version = "0.1.0" }
 window-shadows = "0.2.2"
 tauri-plugin-autostart = "2.0.0-alpha.6"
 tauri-plugin-single-instance = "2.0.0-alpha.6"
