--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,4 +38,5 @@ tauri-plugin-updater = "2.0.0-alpha.6"
 custom-protocol = ["tauri/custom-protocol"]
 
 [lib]
+name = "shion_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
