--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shion",
   "type": "module",
-  "version": "0.6.2",
+  "version": "0.7.0-beta.0",
   "private": true,
   "scripts": {
     "postinstall": "simple-git-hooks",
