--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.7.0-beta.3",
   "private": true,
+  "license": "GPL-3.0-only",
   "scripts": {
     "postinstall": "simple-git-hooks",
     "dev": "vite",
