--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "shion"
-version = "0.2.0"
-description = "A Tauri App"
+version = "0.7.0-beta.3"
 authors = ["hanaTsuk1"]
-license = ""
-repository = ""
+license = "GPL-3.0-only"
+repository = "https://github.com/shion-app/shion"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
