打开日志文件夹

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ window-shadows = "0.2.2"
 tauri-plugin-autostart = "2.0.0-alpha.6"
 tauri-plugin-single-instance = "2.0.0-alpha.6"
 tauri-plugin-updater = "2.0.0-alpha.6"
+open = "5.0.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
