--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
     "notiwind": "^2.0.2",
     "pinia": "^2.0.34",
     "svg.js": "^2.7.1",
-    "tauri-plugin-shion-synchronizer-api": "github:hanaTsuk1/shion-synchronizer",
-    "tauri-plugin-shion-watcher-api": "github:hanaTsuk1/shion-watcher",
+    "tauri-plugin-shion-watcher-api": "github:shion-app/watcher",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
     "vue-component-type-helpers": "^1.8.24",
