--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,8 +24,7 @@ tauri-plugin-store = "2.0.0-alpha.6"
 tauri-plugin-log = "2.0.0-alpha.6"
 tauri-plugin-dialog = "2.0.0-alpha"
 tauri-plugin-clipboard-manager = "2.0.0-alpha"
-tauri-plugin-shion-synchronizer = { git = "https://github.com/hanaTsuk1/shion-synchronizer" }
-tauri-plugin-shion-watcher = { git = "https://github.com/hanaTsuk1/shion-watcher" }
+tauri-plugin-shion-watcher = { git = "https://github.com/shion-app/watcher" }
 sys-locale = "0.3.1"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
