tauri update 2.0.0-rc

--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   "dependencies": {
     "@date-io/date-fns": "^2.17.0",
     "@mdi/font": "^7.3.67",
-    "@tauri-apps/api": "^2.0.0-beta.15",
-    "@tauri-apps/plugin-autostart": "^2.0.0-beta.7",
-    "@tauri-apps/plugin-clipboard-manager": "^2.1.0-beta.5",
-    "@tauri-apps/plugin-dialog": "^2.0.0-beta.7",
-    "@tauri-apps/plugin-fs": "^2.0.0-beta.7",
-    "@tauri-apps/plugin-log": "^2.0.0-beta.8",
-    "@tauri-apps/plugin-process": "^2.0.0-beta.7",
-    "@tauri-apps/plugin-shell": "^2.0.0-beta.8",
-    "@tauri-apps/plugin-sql": "^2.0.0-beta.7",
-    "@tauri-apps/plugin-store": "^2.0.0-beta.7",
-    "@tauri-apps/plugin-updater": "^2.0.0-beta.7",
+    "@tauri-apps/api": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-autostart": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-clipboard-manager": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-fs": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-log": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-process": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-shell": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-sql": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-store": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-updater": "^2.0.0-rc.0",
     "@tiptap/core": "^2.2.0",
     "@tiptap/extension-code-block-lowlight": "^2.2.0",
     "@tiptap/extension-image": "^2.2.0",
@@ -93,7 +93,7 @@
     "@iconify-json/mdi": "^1.1.50",
     "@intlify/unplugin-vue-i18n": "^1.4.0",
     "@rollup/pluginutils": "^5.0.2",
-    "@tauri-apps/cli": "^2.0.0-beta.22",
+    "@tauri-apps/cli": "^2.0.0-rc.0",
     "@types/better-sqlite3": "^7.6.5",
     "@types/node": "^18.7.10",
     "@types/postcss-pxtorem": "^6.0.3",
