--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,20 +9,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-rc.0", features = [] }
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "^0.4"
-tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "tray-icon", "devtools"] }
-tauri-plugin-process = "2.0.0-beta"
-tauri-plugin-fs = "2.0.0-beta"
-tauri-plugin-shell = "2.0.0-beta"
-tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
-tauri-plugin-store = "2.0.0-beta"
-tauri-plugin-log = "2.0.0-beta"
-tauri-plugin-dialog = "2.0.0-beta"
+tauri = { version = "2.0.0-rc.0", features = [ "protocol-asset", "tray-icon", "devtools"] }
+tauri-plugin-process = "2.0.0-rc.0"
+tauri-plugin-fs = "2.0.0-rc.0"
+tauri-plugin-shell = "2.0.0-rc.0"
+tauri-plugin-sql = { version = "2.0.0-rc.0", features = ["sqlite"] }
+tauri-plugin-store = "2.0.0-rc.0"
+tauri-plugin-log = "2.0.0-rc.0"
+tauri-plugin-dialog = "2.0.0-rc.0"
 tauri-plugin-clipboard-manager = "2.1.0-beta"
 tauri-plugin-shion-watcher = { git = "https://github.com/shion-app/watcher" }
 tauri-plugin-shion-history = { git = "https://github.com/shion-app/history" }
@@ -33,9 +33,9 @@ planif = { git = "https://github.com/hanaTsuk1/planif" }
 anyhow = "1"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
-tauri-plugin-autostart = "2.0.0-beta"
-tauri-plugin-single-instance = "2.0.0-beta"
-tauri-plugin-updater = "2.0.0-beta"
+tauri-plugin-autostart = "2.0.0-rc.0"
+tauri-plugin-single-instance = "2.0.0-rc.0"
+tauri-plugin-updater = "2.0.0-rc.0"
 zip = "0.6"
 zip-extensions = "0.6"
 runas = "1.2.0"
