--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "coverage": "vitest run --coverage",
     "badge": "istanbul-badges-readme --style=\"for-the-badge\"",
     "lint:fix": "eslint . --fix",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:reset-migrate": "rimraf prisma/database && rimraf prisma/migrations && prisma migrate dev",
+    "prisma:generate": "prisma generate",
+    "sea-orm:generate": "cd src-tauri && cargo bin sea-orm-cli generate entity -u sqlite://../prisma/database/data.db -o src/database/models",
+    "db:generate": "pnpm prisma:generate && pnpm sea-orm:generate",
+    "db:migrate": "prisma migrate dev && pnpm sea-orm:generate",
+    "db:reset-migrate": "rimraf prisma/database && rimraf prisma/migrations && pnpm db:migrate",
     "db:format": "prisma format",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
