--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@tauri-apps/api": "^2.0.0-rc.0",
     "@tauri-apps/plugin-autostart": "^2.0.0-rc.0",
     "@tauri-apps/plugin-clipboard-manager": "^2.0.0-rc.0",
-    "@tauri-apps/plugin-dialog": "^2.0.0-rc.0",
-    "@tauri-apps/plugin-fs": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-dialog": "2.0.0-rc.1",
+    "@tauri-apps/plugin-fs": "2.0.0-rc.2",
     "@tauri-apps/plugin-log": "^2.0.0-rc.0",
     "@tauri-apps/plugin-process": "^2.0.0-rc.0",
     "@tauri-apps/plugin-shell": "^2.0.0-rc.0",
