--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tauri-apps/plugin-sql": "^2.0.0-rc.0",
     "@tauri-apps/plugin-store": "^2.0.0-rc.0",
     "@tauri-apps/plugin-updater": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-window-state": "2.0.0-rc.1",
     "@tiptap/core": "^2.2.0",
     "@tiptap/extension-code-block-lowlight": "^2.2.0",
     "@tiptap/extension-image": "^2.2.0",
